--- a/learning_sites/templates/basic_app/front_base.html
+++ b/learning_sites/templates/basic_app/front_base.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-xl">
       <div class="container">
         <ul class="navbar-nav">
-          <li ><a class="navbar-brand" href="{% url 'user_login' %}">Login</a></li>
+          <li ><a class="navbar-brand" href="{% url 'user_login' %}">Login Here</a></li>
           <li><a class="nav-link" href="{% url 'basic_app:registration' %}">Register</a></li>
         </ul>
       </div>
