--- a/learning_sites/templates/basic_app/login.html
+++ b/learning_sites/templates/basic_app/login.html
@@ -2,7 +2,7 @@
 
 {% block body_block %}
 
-  <h1>Login</h1>
+  <h1>Login Here</h1>
   <form  action="{% url 'user_login' %}" method="post">
     <div class="form-group">
       {% csrf_token %}
